Assembler/tests/ok/constants/string_containing_the_string_directive.asm
hi: .string "uh oh look out for .string in text"
