Assembler/tests/bad/constants/bad_characters_after_strings.asm
hi: .string "foo"  uh oh bad stuff
